<resources>
    <string name="app_name">O Preço X</string>

    <!--           Main Menu Strings         -->
    <string name="singleplayer">Jogar</string>
    <string name="multiplayer">Jogar com Amigos</string>
    <string name="savedAds">Anúncios Guardados</string>

    <string name="rateUs">Classifica o nosso jogo</string>
    <string name="rateUsTooltip">Se estás a gostar d\'O Preço X podes tirar um momento para avaliar o nosso jogo na Google Play.\nObrigado pelo apoio!</string>
    <string name="rateUsYes">OK</string>
    <string name="rateUsNo">Não, obrigado</string>
    <string name="rateUsLater">Agora não</string>

    <!--          Game Options Strings       -->

    <string name="gameType">Tipo de jogo</string>
    <string name="gameSize">Duração</string>
    <string name="categories">Categorias</string>
    <string name="processDialog">A carregar…</string>
    <string name="start">Começar</string>
    <string name="interneterror">Acesso à internet indisponível.</string>

    <!--           Game Size Strings         -->
    <string name="gameSizeTitle">Duração do Jogo</string>
    <string name="shortsize">Jogo curto</string>
    <string name="normalsize">Jogo normal</string>
    <string name="longsize">Jogo longo</string>

    <!--           Game Time Strings         -->
    <string name="gameTime">Tempo após palpite</string>
    <string name="shortwait">30 Segundos</string>
    <string name="normalwait">1 Minuto</string>
    <string name="longwait">2 Minutos</string>
    <string name="timeup">Acabou o tempo de resposta.</string>

    <!--           Saved Ads Strings         -->

    <string name="savedAdsTooltip">Ainda não tens Anúncios Guardados.\nPodes salvar anúncios depois de dares um palpite.</string>

    <!--         Game Activity Strings       -->

    <string name="leavegame">Sair do jogo?</string>
    <string name="leavegamesub">Se saíres do jogo o teu progresso e os anúncios gerados serão perdidos.</string>
    <string name="leave">Sair</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="next">Continuar</string>
    <string name="correctprice">Preço Certo</string>
    <string name="score">Pontuação</string>
    <string name="savedAd">Anúncio Guardado</string>
    <string name="loadingAds">A carregar anúncios…</string>
    <string name="waiting">À espera de jogadores</string>
    <string name="waitingHost">À espera do anfitrião</string>

    <!--           Game Over Strings         -->

    <string name="gameOverTitle">Fim do Jogo</string>
    <string name="finish">Acabar</string>
    <string name="finalScore">Pontuação Final</string>

    <!--            Multiplayer Hub          -->

    <string name="pleaseWait">Por Favor Espere!</string>
    <string name="tryingToEstablish">A tentar estabelecer conexão.</string>
    <string name="connectionTimeout">Tempo de conexão excedido.</string>
    <string name="connectionNotAvailable">Conexão acabada.</string>
    <string name="noIP">Não conectado a uma rede Wi-Fi</string>
    <string name="host">Criar Sala</string>
    <string name="invite">Convidar </string>
    <string name="inviteIP">convidar por ip</string>
    <string name="notavailable">Não Disponível</string>
    <string name="adPopupTooltip">Para mudar de nome é necessário ver um anúncio</string>
    <string name="invitetitle">Convidar Amigos</string>
    <string name="changeName">Novo nome</string>
    <string name="inviteTooltip">Para encontrar dispositivos, é necessário que estes estejam na mesma rede Wi-Fi
    Caso não encontres amigos podes tentar convidá-los diretamente por IP abaixo.</string>
    <string name="inputip">Introduzir IP</string>
    <string name="inputiptooltip">Ambos os dispositivos têm de se encontrar na mesma rede Wi-Fi.\n
        O endereço de IP de um dispositivo encontra-se no menu inicial do multijogador.</string>
    <string name="multiplayerHubTooltip">Aqui aparecem os teus convites de jogo.\n
        Podes criar uma sala e ser tu a convidar amigos.</string>

    <string name="signin_other_error">There was an issue with sign-in, please try again later."</string>

    <string name="gameoptionssingleplayer">Opções Um Jogador</string>
    <string name="gameoptionsmultiplayer">Opções Multijogador</string>
    <string name="startcaps">COMEÇAR</string>


    <string name="leaveapp">Sair da Aplicação</string>
    <string name="leaveappsub">Deseja sair da Aplicação?</string>
    <string name="comingsoon">Brevemente…</string>
    <string name="namehint">Nome do jogador</string>
    <string name="signin_failure">Erro na autenticação.</string>
    <string name="googlePlayFail">Erro a conectar à Google Play Games.</string>

    <!--              Lobby Host             -->
    <string name="aloneinlobby">Sem jogadores para iniciar jogo</string>
    <string name="newRoom">Nova Sala</string>

    <!--               Invite                -->
    <string name="invalidoip">IP inválido</string>
    <string name="sendinviteip">Convite enviado!</string>
    <string name="inviteerror">Erro a enviar convite.</string>

    <!--             Info Activity           -->
    <string name="infoTitle">Sobre</string>
    <string name="mainDeveloper">Main Developer</string>
    <string name="mainDeveloperName">Paulo Correia</string>
    <string name="multiplayerDeveloper">Developer</string>
    <string name="multiplayerDeveloperName">Nuno Neto</string>
    <string name="design">Designer</string>
    <string name="designName">Inês Costa</string>
    <string name="thanks">Agradecimentos</string>
    <string name="thanksNames">António Carreiro\nDiogo Morgado\nFrancisca Pessanha\nGonçalo Sores\nMarta Fróis</string>
    <string name="otherInfoTitle">Informações</string>
    <string name="otherInfo">Contacte-nos por e-mail\npipas.software@gmail.com\n\nO Preço X não é afiliado com o olx.pt\nnem com a empresa Fixeads</string>
    <string name="libraries">Bibliotecas</string>

    <string name="olxError">Erro a conectar ao OLX</string>

    <!--             BETA              -->
    <string name="betaTooltipTitle">Multijogador BETA</string>
    <string name="betaTooltip">A funcionalidade de multijogador ainda se encontra em desenvolvimento e pode conter erros e problemas.</string>

</resources>
