<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/softWhite"
    tools:context=".activities.other.GameTimeChooser">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/purple"
        android:elevation="2dp">

        <TextView
            android:id="@+id/gameTimeTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gameTime"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/softWhite"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="pressshort"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/shortWaitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shortwait"
            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="pressnormal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/normalWaitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normalwait"
            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="presslong"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/longWaitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longwait"
            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"/>

</LinearLayout>
