<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softWhite"
    android:orientation="vertical"
    tools:context="software.pipas.oprecox.activities.multiPlayer.Invite">

    <LinearLayout
        android:id="@+id/savedAdsTitle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/purple"
        android:elevation="2dp">

        <TextView
            android:id="@+id/invitesTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/invitetitle"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/softWhite"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/inviteTooltip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inviteTooltip"
            android:textAlignment="center"
            android:layout_margin="12dp"
            android:layout_gravity="center_horizontal"/>

        <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
            android:id="@+id/playersListViewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <software.pipas.oprecox.modules.customViews.CustomButton
        android:id="@+id/inviteButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/inviteIP"
        android:textAllCaps="true"
        android:layout_margin="12dp"
        android:textSize="20sp"
        android:shadowDy="1"
        android:shadowDx="0"
        android:shadowRadius="5"
        android:textColor="@color/softWhite"
        style="@style/Widget.AppCompat.Button.Colored"/>



</LinearLayout>
